Add a game loop. Add client game display canvas with screen refresh

--- a/public/client_styles.css
+++ b/public/client_styles.css
@@ -8,3 +8,14 @@ body {
 	
   background-color: #111111;
 }
+
+#myCanvas {
+  display: block;
+  height : 500px;
+  width : 500px;
+  border: 1px solid #d3d3d3;
+}
+
+#launchButton {
+  display: block;
+}
