--- a/source/public/client_styles.css
+++ b/source/public/client_styles.css
@@ -1,11 +1,9 @@
 
 body {
-  position:fixed;
-  margin: 0;
-  padding: 0;
-	
-  border:1px solid #d3d3d3; 
-	
+  position : fixed;
+  margin : 0;
+  padding : 0;	
+  border : 1px solid #d3d3d3; 	
   background-color: #111111;
 }
 
@@ -18,4 +16,17 @@ body {
 
 #launchButton {
   display: block;
+}
+
+.disabled-class {  
+  opacity: .30;
+}
+
+.form-container {
+  padding : 20px;
+  background-color : #ffffff;
+}
+
+.container {
+  padding : 5px;
 }
