--- a/source/public/game_styles.css
+++ b/source/public/game_styles.css
@@ -1,10 +1,12 @@
 
 body {
+  /*
   position : fixed;
   margin : 0;
   padding : 0;	
   border : 1px solid #d3d3d3; 	
   background-color: #111111;
+  */
 }
 
 #myCanvas {
