--- a/source/public/game_styles.css
+++ b/source/public/game_styles.css
@@ -9,16 +9,24 @@ body {
   */
 }
 
-#myCanvas {
-  display: block;
-  height : 500px;
-  width : 500px;
-  border: 1px solid #d3d3d3;
+.container {
+    width: 100%;
+    height: 500px;    
+    padding: 10px;
+}
+.left {
+    border: 1px solid #d3d3d3;
+    width: 500px;
+    height: 500px;
+    float: left;
+}
+.right {
+    margin-left: 500px;
+    width: 250px;
+    height: 500px;
+    background: #dddddd;
 }
 
-#launchButton {
-  display: block;
-}
 
 .disabled-class {  
   opacity: .30;
